<resources>
    <string name="app_name">Woney</string>
    <string name="facebook_app_id">201701940275937</string>
    <string name="tapjoy_sdkKey">93wQa0NzRRajWv-k4Bl6QwECctEoatezPMS4xolz9c4HsszGPY1s5o5ykTo0</string>
    <string name="banner_ad_unit_id">ca-app-pub-5477140292908800/3119522179</string>
    <string name="gad_ad_unit_id">ca-app-pub-5477140292908800/4596255379</string>

    <string name="sys_is_first">FIRST_TIME_START</string>

    <string name="sys_no_connect">Please connect to Internet.</string>

    <string-array name="woney_user_vars">
        <item>@string/user_id</item>
        <item>@string/user_woney</item>
        <item>@string/user_total_woney</item>
        <item>@string/user_won_times</item>
        <item>@string/user_bets</item>
        <item>@string/user_offline_woney</item>
        <item>@string/user_access_token</item>
        <item>@string/woney_last_daily_earn</item>
        <item>@string/woney_last_fb_share</item>
    </string-array>

    <string-array name="api_header_access">
        <item>@string/user_access_token</item>
    </string-array>

    <string name="user_id">_id</string>
    <string name="user_woney">woney</string>
    <string name="user_total_woney">totalWoney</string>
    <string name="user_won_times">wonTimes</string>
    <string name="user_bets">bets</string>
    <string name="user_access_token">x-access-token</string>
    <string name="woney_added_woneys">addedWoneys</string>

    <string name="woney_last_daily_earn">lastDailyEarn</string>
    <string name="woney_last_fb_share">lastFbShare</string>

    <string name="user_offline_woney">offlineWoney</string>

    <string-array name="fb_user_vars">
        <item>@string/fb_user_facebook_id</item>
        <item>@string/fb_user_first_name</item>
        <item>@string/fb_user_middle_name</item>
        <item>@string/fb_user_last_name</item>
        <item>@string/fb_user_display_name</item>
        <item>@string/fb_user_email</item>
        <item>@string/fb_user_gender</item>
        <item>@string/fb_user_photo_url</item>
    </string-array>

    <string name="fb_user_facebook_id">facebookId</string>
    <string name="fb_user_first_name">firstName</string>
    <string name="fb_user_middle_name">middleName</string>
    <string name="fb_user_last_name">lastName</string>
    <string name="fb_user_display_name">displayName</string>
    <string name="fb_user_email">email</string>
    <string name="fb_user_gender">gender</string>
    <string name="fb_user_photo_url">photo</string>
    <string name="fb_user_name">name</string>

    <string-array name="ongoing_resp">
        <item>@string/api_id</item>
        <item>@string/api_reward</item>
        <item>@string/api_sec_reward</item>
        <item>@string/api_start_time</item>
        <item>@string/api_end_time</item>
        <item>@string/api_finished</item>
        <item>@string/api_series</item>
    </string-array>

    <string name="api_id">_id</string>
    <string name="api_reward">reward</string>
    <string name="api_sec_reward">secondReward</string>
    <string name="api_start_time">startTime</string>
    <string name="api_end_time">endTime</string>
    <string name="api_finished">finished</string>
    <string name="api_series">series</string>
    <string name="api_game_id">gameId</string>
    <string name="api_is_daily_earn">isDailyEarn</string>
    <string name="api_is_fb_share">isFbShare</string>

    <string name="api_first_winner">firstWinner</string>
    <string name="api_common_winners">commonWinners</string>

    <string name="tour_page_1_title">Join Woney</string>
    <string name="tour_page_1">Play for free</string>
    <string name="tour_page_2_title">Earn Woney credits to play</string>
    <string name="tour_page_2">It\'s fun and easy</string>
    <string name="tour_page_3_title">Each game complete weekly</string>
    <string name="tour_page_3">You may win BIG</string>
    <string name="tour_swipe_left">&lt; Swipe Left</string>
    <string name="tour_btn_start">Start</string>

    <string name="woney_credits">Woney Credits：%1$s</string>

    <string name="title_activity_facebook">FacebookActivity</string>

    <string name="main_tab_key">tag_key</string>
    <string name="main_tab_main">Home</string>
    <string name="main_tab_winner">Winner</string>
    <string name="main_tab_setting">Setting</string>
    <string name="title_activity_tour">TourActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <string name="earn_top_paypal">Estimate top prize:</string>
    <string name="earn_top_draw">This week\'s game will end in %1$d days %2$d hrs</string>
    <string name="earn_top_btn_luk">Click to get ticket</string>
    <string name="earn_top_btn_luk_comment">(you got %1$d tickets now)</string>
    <string name="earn_top_woneybet">Tips: 10 Woney credits to join, the more tickets you got, the higher chance you win.</string>

    <string name="earn_offer_wall">OFFER WALL</string>
    <string name="earn_offer_wall_credits">+1~100 credits</string>
    <string name="earn_offer_wall_preparing">Preparing</string>
    <string name="earn_watch_ads">WATCH ADS</string>
    <string name="earn_watch_ads_credits">+2 credits</string>
    <string name="earn_fb_share">FB SHARE</string>
    <string name="earn_fb_share_credits">+2 credits</string>
    <string name="earn_daily_earn">DAILY EARN</string>
    <string name="earn_daily_earn_credits">+1 credits</string>

    <string name="winner_winner">%1$s Top prize winner:</string>
    <string name="winner_top_price">$%1$d</string>
    <string name="winner_sec_price">Second prize: $%1$d /each</string>
    <string name="winner_history">History</string>
    <string name="winner_buttom_msg">We will inform the winner via facebook messenger.</string>

    <string name="winner_dialog_text">The winners will be announced at</string>

    <string name="setting_fb_gusee">Guest</string>
    <string name="setting_fb_login">Login</string>
    <string name="setting_how_it_work">How it works</string>
    <string name="setting_tour">Tour</string>
    <string name="setting_contact">Contact us</string>
    <string name="setting_fb_fan_page">FB fanpage</string>
    <string name="setting_logout">Log out</string>

    <string name="alert_fb_logout">Logout your facebook?</string>
    <string name="alert_fb_logout_btn_true">Logout</string>
    <string name="alert_fb_logout_btn_false">Cancel</string>

    <string name="dialog_congratulations">Congratulations!</string>
    <string name="dialog_woney_reward">%1$d Woney reward.</string>
    <string name="dialog_collect">Collect</string>
    <string name="dialog_already_gain">You have already collected today.</string>
    <string name="dialog_back_tomorrow">Come back tomorrow.</string>
    <string name="dialog_countdown_top">It\'s good to know that you love us.</string>
    <string name="dialog_countdown_bottom">Come back later to share and earn.</string>
    <string name="dialog_contact_us">Any Questions?</string>
    <string name="dialog_mail_us">Mail us:</string>
    <string name="dialog_mail">woneyglobe@gmail.com</string>
    <string name="dialog_no_woney">You don\'t have enough Woney.\nEarn Woney to win BIG cash!</string>
    <string name="dialog_ok">OK</string>
    <string name="dialog_close">Close</string>

    <string name="how_1_title">1. Earn Woney Credits</string>
    <string name="how_1_content">Click OFFER WALL, WATCH ADS, FB SHARE, and DAILY EARN to\nearn Woney easily.</string>
    <string name="how_2_title">2. Play weekly games</string>
    <string name="how_2_content">Earn Woney credits to play. The more you play, the more chance\nyou win.</string>
    <string name="how_3_title">3. Each game complete weekly</string>
    <string name="how_3_content">Game winners announce at 9pm every Sunday (GMT+5.5).\nWill have one top prize and 10 second prize winners.</string>
    <string name="how_4_title">4. Cash out</string>
    <string name="how_4_content">We will inform the winner via facebook messenger.\nWinners should provide PayPal account in 30 days to cash out. If the winner don\'t provide the PayPal account in 30 days, will be\ndisqualified to get prize. \nPayouts may take 30 to 45 days and will be paid directly to winners\' PayPal accounts.</string>
</resources>
