<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/dialog_gain_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:background="@color/woney_white"
    android:fitsSystemWindows="true"
    android:weightSum="7">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1.5"
        android:layout_marginTop="17dp"
        android:layout_marginBottom="5dp"
        android:gravity="center_vertical"
        android:text="@string/dialog_contact_us"
        android:textSize="@dimen/woney_textsize_20"
        android:textColor="@color/woney_black"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1.5"
        android:layout_marginLeft="8dp"
        android:layout_marginBottom="5dp"
        android:layout_gravity="left"
        android:text="@string/dialog_mail_us"
        android:textSize="@dimen/woney_textsize_17_5"
        android:textColor="@color/woney_black"
        />

    <TextView
        android:id="@+id/dialog_earn_text"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:layout_marginBottom="17dp"
        android:layout_marginLeft="8dp"
        android:layout_gravity="left"
        android:gravity="center_vertical"
        android:text="@string/dialog_mail"
        android:textSize="@dimen/woney_textsize_17_5"
        android:textColor="@color/woney_black"
        android:onClick="sendMail"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/btn_white"
        android:text="@string/dialog_collect"
        android:textSize="@dimen/woney_textsize_20"
        android:textColor="@color/woney_black"
        android:onClick="clickClose"
        android:textAllCaps="false"
        />
</LinearLayout>
