<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/bg_popup"
    android:weightSum="6">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/dialog_already_gain"
        android:textSize="@dimen/woney_textsize_17_5"
        android:textColor="@color/woney_black"
        />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:src="@drawable/icon_already_collect"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/dialog_back_tomorrow"
        android:textSize="@dimen/woney_textsize_17_5"
        android:textColor="@color/woney_black"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:background="@drawable/btn_white"
        android:text="@string/dialog_ok"
        android:textSize="@dimen/woney_textsize_20"
        android:textColor="@color/woney_black"
        android:onClick="clickOK"
        />
</LinearLayout>
