<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:background="@color/woney_white"
    android:fitsSystemWindows="true"
    android:weightSum="7">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginTop="17dp"
        android:layout_marginBottom="5dp"
        android:gravity="center_vertical"
        android:text="@string/dialog_already_gain"
        android:textSize="@dimen/woney_textsize_17_5"
        android:textColor="@color/woney_black"
        />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="2.5"
        android:layout_marginBottom="5dp"
        android:src="@drawable/icon_already_collect"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginBottom="17dp"
        android:text="@string/dialog_back_tomorrow"
        android:textSize="@dimen/woney_textsize_17_5"
        android:textColor="@color/woney_black"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/btn_white"
        android:text="@string/dialog_ok"
        android:textSize="@dimen/woney_textsize_20"
        android:textColor="@color/woney_black"
        android:onClick="clickOK"
        />
</LinearLayout>
